added base implementation of CustomBlockList View

--- a/org.neuro4j.studio.core.diagram/src/org/neuro4j/studio/core/views/flows/messages.properties
+++ b/org.neuro4j.studio.core.diagram/src/org/neuro4j/studio/core/views/flows/messages.properties
@@ -1,5 +1,5 @@
 FlowView_AddingBatchedEvents;
-FlowView_WorkspaceLogFile=Workspace Flows
+FlowView_Title=Workspace Flows
 FlowView_GroupByNone;
 FlowView_GroupBy=Group By
 FlowView_GroupByPlugin=Plug-in
@@ -8,3 +8,7 @@ FlowView_show_filter_initialText=Filter
 FlowView_column_message=Flow
 FlowView_column_plugin=Plug-in
 FlowView_column_date=Date
+
+
+CustomBlockView_Title=Workspace CustomBlocks
+CustomBlockView_column_message=Custom Blocks
