added support of trigger nodes

--- a/org.neuro4j.studio.core.diagram/src/org/neuro4j/studio/core/views/flows/messages.properties
+++ b/org.neuro4j.studio.core.diagram/src/org/neuro4j/studio/core/views/flows/messages.properties
@@ -12,3 +12,6 @@ FlowView_column_date=Date
 
 CustomBlockView_Title=Workspace CustomBlocks
 CustomBlockView_column_message=Custom Blocks
+
+TriggerBlockView_Title=Workspace TriggerBlocks
+TriggerBlockView_column_message=Trigger Blocks
